[package]
name = "pedersen-geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet-crypto = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
starknet-curve = { git = "https://github.com/geometryresearch/proof-toolbox.git" }
lazy_static = "1.4.0"
hex = "0.4.3"
leftpad = "0.2.0"
num = "0.4.0"
